--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@ a {
 <body>
     <div id="app">
     <div class="connection">
-        <label>Server (host[:port][/path]) <input v-model="connection.url"></label>
-        <span>TLS websocket</span>
+        <label>TLS WebSocket Server (host[:port][/path]) <input v-model="connection.url"></label>
         <button @click="showIrcOpts = !showIrcOpts">More options</button>
         <button @click="connectIrc">Connect</button>
         <span v-if="numConnects > 0" class="connection-state">{{ connectionStates[connection.state] }}</span>
